react-front-end/src/styles/profile.css
.profile-section {
  padding-bottom: 3em;
}

.profile-pic {
  height: 330px;
  border-radius: 5px;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.profile-header {
  width: 70rem;
  display: flex;
  justify-content: space-around;
  flex-direction: row;
  border: 1px solid lightgrey;
  margin: 3em 0;
  padding: 1.5em;
  border-radius: 5px;
  font-family: "Krub", sans-serif;
}

.profile-info {
  width: 63%;
  display: flex;
  flex-direction: column;
  gap: 25px;
}

.profile-info h1 {
  font-weight: 200;
  font-size: 70px;
  margin: 0;
}

.profile-info h4 {
  font-weight: 200;
  font-size: 20px;
  margin: 0;
  color: gray;
}

.profile-info p {
  font-weight: 700;
  font-size: 30px;
  margin: -20px 0 0 0;
  text-align: end;
}


.profile-welcome {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.profile-welcome .profile-actions {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  gap: 1em;
  padding: 0px;
}

.profile-welcome .profile-actions span {
  font-size: 35px;
}

.profile-actions:hover {
  cursor: pointer;
}

.profile-info table {
  table-layout: fixed;
  width: 100%;
  text-align: center;
  margin: 0;
}

.profile-info tbody {
  font-size: 70px;
}

.profile-info .unit {
  font-size: 30px;
}

.profile-stats button {
  color: #495057;
}

.profile-stats button:hover {
  color: #495057;
  background-color: rgb(205, 205, 205);
}

.empty-runs-container {
  padding: 2em;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2em;
}

.empty-runs-container h3{
  font-weight: 300;
  text-align: center;
}

.empty-runs-container .empty-runs-button {
  width: 20rem;
  height: 7rem;
  color: white;
  font-size: 30px;
}

